--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v2
+        with:
+          version: "10.0"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
