--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,14 +29,14 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: "10.0"
+      #- name: Install LLVM and Clang
+      #  uses: KyleMayes/install-llvm-action@v2
+      #  with:
+      #    version: "10.0"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
-        run: make
+        run: make all-clang
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
